name:                Has5
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable has5
  hs-source-dirs:      src
  main-is:             Main.hs
  Other-Modules:       Logic
                     , Recommender
                     , Material
                     , GUI
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fwarn-unused-binds
  build-depends:       base >= 4.7 && < 5
                     , array
                     , random
                     , stm
                     , parallel
                     , gtk
                     , text
                     , deepseq
  default-language:    Haskell2010
